# PBI-INGEST

./: README.md
recon-tool/: .gitignore  README.md  pyproject.toml
recon-tool/configs/: another_project.yaml  mvh.yaml
recon-tool/examples/: run_general.sh  run_site_146.sh
recon-tool/src/recon/: __init__.py  cli.py
recon-tool/src/recon/adapters/: __init__.py  csv_model.py  pbi_layout.py  powerbi_dataset.py
recon-tool/src/recon/core/: __init__.py  config.py  ingest.py  models.py  normalize.py  rules.py
recon-tool/src/recon/core/reporting/: __init__.py  artifacts.py  jsonout.py  markdown.py
recon-tool/src/recon/core/validators/: __init__.py  duplicates.py  entity_compare.py  nulls.py  referential.py
recon-tool/src/recon/reporting/: __init__.py  json_reporter.py  markdown_reporter.py
recon-tool/tests/: __init__.py  test_entity_compare.py  test_rules.py  test_sprint0.py
